--- a/TestApi/pom.xml
+++ b/TestApi/pom.xml
@@ -59,14 +59,14 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.3.1</version>
-			<scope>compile</scope>
+			<!-- <scope>compile</scope> -->
 		</dependency>
 		
 		<dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.3.1</version>
-            <scope>compile</scope>
+            <!-- <scope>compile</scope> -->
         </dependency>
 
 	</dependencies>
